fixed overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,6 @@ body {
     margin: 0;
     background: #000000;
     color: #FFFFFF;
-    overflow-x: hidden;
 }
 a{
     color: #FFFFFF;
@@ -25,6 +24,9 @@ a{
 }
 a:hover {
     color: cornsilk;
+}
+.wrapper-hidden{
+    overflow-x: hidden;
 }
 
 /*----ТЕХНИЧЕСКИЕ КЛАССЫ----*/
@@ -59,9 +61,6 @@ a:hover {
     font-weight: 400;
     font-size: 18px;
     line-height: 25px;
-    
-    /* color: #BFBFBF; */
-
     border: 1px solid #5C5C5C;
     border-radius: 10px;
 }
